--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emurgo/cardano-serialization-lib-nodejs": "^13.2.0",
     "@meshsdk/core": "^1.7.30",
+    "bech32-converting": "^1.0.9",
     "cbor": "^10.0.3",
     "dotenv": "^16.4.7"
   }
